--- a/test/index.html
+++ b/test/index.html
@@ -5,13 +5,13 @@
     <title>webSpeaker</title>
     <meta charset="utf8">
     <link rel="stylesheet" href="../src/jquery.webSpeaker.css">
-    <script src="../src/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="../src/jquery.webSpeaker.js"></script>
 </head>
 
 <body>
     <div id="example">
-        <h2>Using TTS</h2>
+        <h2>Use responsiveVoice</h2>
         <p class="speaker">Hello World</p>
         <script type="text/javascript">
              $('#example .speaker').webSpeaker();
@@ -19,24 +19,24 @@
         <script type="text/javascript" src="https://code.responsivevoice.org/responsivevoice.js"></script>
         <hr>
         <div id="example1">
-            <h2>Specification an audio track</h2>
-            <p class="speaker" data-track="test.mp3" data-responsive-Voice="false">
+            <h2>Set an audio track</h2>
+            <p class="speaker" data-responsive-Voice="false">
                 jQuery webSpeaker is a jQuery plugin that will make any readable text in the specified HTML DOM element as audible by responsiveVoice,Also
                 you can set a custom Audio track. jQuery webSpeaker is useful for blind visitors.
             </p>
             <script type="text/javascript">
-      $('#example1 .speaker').webSpeaker();
+    $('#example1 .speaker').webSpeaker({track:'test.mp3'});
     </script>
         </div>
         <hr>
         <div id="example2">
             <h2>onHover</h2>
-            <p class="speaker" data-track="test.mp3" data-responsive-Voice="false" data-play-Type="hover">
+            <p class="speaker" data-track="test.mp3">
                 jQuery webSpeaker is a jQuery plugin that will make any readable text in the specified HTML DOM element as audible by responsiveVoice,Also
                 you can set a custom Audio track. jQuery webSpeaker is useful for blind visitors.
             </p>
             <script type="text/javascript">
-      $('#example2 .speaker').webSpeaker();
+      $('#example2 .speaker').webSpeaker({playType:"hover",responsiveVoice:false});
     </script>
         </div>
 </body>
